# a3_framework

./: .gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml
a3_framework/: agent.py  auditor.py  authority.py  config.py  exceptions.py  llm_wrapper.py  logger.py  sample_tools.py
examples/: text_generation_demo.py
